# Bureau-Agent

./: .dockerignore  .gitignore  .replit  AI_AUTOMATION_ROADMAP.md  Agent_de_Bureau_Kullanma_Kilavuzu.md  Ajant_Bureau_Kullanma_Kilavuzu.md  DEPLOY_GITHUB.md  DEPLOY_IONOS.md  KULLANIM_KILAVUZU.md  MIGRATION.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  replit.md  schema_files_aa  schema_files_ab  schema_files_ac  schema_files_ad  schema_files_ae  schema_files_af  schema_files_ag  schema_files_ah  schema_files_ai  schema_files_aj  schema_files_ak  schema_files_al  schema_files_am  schema_files_an  schema_files_ao  schema_files_ap  schema_files_aq  tsconfig.json
apps/api-py/: .env.example  pyproject.toml
apps/api-py/alembic/: env.py  script.py.mako
apps/api-py/alembic/versions/: README.md
apps/api-py/src/agent_bureau_api/: logging.py  main.py  settings.py
apps/api-py/src/agent_bureau_api/auth/: api_key_auth.py  api_token.py  crypto.py  dependencies.py  invalidation_cache.py  session_backend.py
apps/api-py/src/agent_bureau_api/db/: base.py  enums.py  mixins.py  session.py
apps/api-py/src/agent_bureau_api/middleware/: error_handler.py  guardian.py  headers.py  license_check.py  proto_pollution.py  rate_limit.py  security.py
apps/api-py/src/agent_bureau_api/routes/: __init__.py  auth.py  health.py
apps/api-py/src/agent_bureau_api/tenant/: context.py  guard.py  scoped_query.py
apps/api-py/tests/: conftest.py  test_middleware_order.py  test_status_enum_drift.py  test_tenant_isolation.py
deploy/: Caddyfile  (+19 more)
(+794 files in other folders)
