[project]
name = "agent-bureau-api"
version = "0.1.0"
description = "Python (FastAPI) rewrite of the Agent de Bureau Express API — Phase 1 foundation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
    "slowapi>=0.1.9",
    "cryptography>=42.0",
    "bcrypt>=4.1",
    "itsdangerous>=2.2",
    "pyotp>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_bureau_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
